update(cluster-test): Bump cluster-test version to 1.7.0