@@ -34,8 +34,12 @@ import static org.apache.hugegraph.ct.base.ClusterConstant.SERVER_PACKAGE_PATH;
 import static org.apache.hugegraph.ct.base.ClusterConstant.SERVER_TEMPLATE_PATH;
 import static org.apache.hugegraph.ct.base.ClusterConstant.isJava11OrHigher;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -43,6 +47,7 @@ import java.util.List;
 
 public class ServerNodeWrapper extends AbstractNodeWrapper {
 
+    private static List<String> hgJars = new ArrayList<>();
     public ServerNodeWrapper(int clusterIndex, int index) {
         super(clusterIndex, index);
         this.fileNames = new ArrayList<>(
@@ -54,6 +59,7 @@ public class ServerNodeWrapper extends AbstractNodeWrapper {
         this.startLine = "INFO: [HttpServer] Started.";
         createNodeDir(Paths.get(SERVER_PACKAGE_PATH), getNodePath());
         createLogDir();
+        loadHgJars();
     }
 
     private static void addJarsToClasspath(File directory, List<String> classpath) {
@@ -64,6 +70,36 @@ public class ServerNodeWrapper extends AbstractNodeWrapper {
                     classpath.add(file.getAbsolutePath());
                 }
             }
+        }
+    }
+
+    private static void addCpJarsToClasspath(File directory, List<String> classpath) {
+        // Add jar starts with hugegraph in proper order
+        String path = directory.getAbsolutePath();
+        for (String jar : hgJars) {
+            classpath.add(path + File.separator + jar);
+        }
+        if (directory.exists() && directory.isDirectory()) {
+            File[] files =
+                    directory.listFiles((dir, name) -> name.endsWith(".jar") && !name.contains(
+                            "hugegraph"));
+            if (files != null) {
+                for (File file : files) {
+                    classpath.add(file.getAbsolutePath());
+                }
+            }
+        }
+    }
+
+    private void loadHgJars(){
+        try (InputStream is = ServerNodeWrapper.class.getResourceAsStream("/jar.txt");
+             BufferedReader reader = new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                hgJars.add(line);
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
         }
     }
 
@@ -79,7 +115,7 @@ public class ServerNodeWrapper extends AbstractNodeWrapper {
             }
 
             List<String> classpath = new ArrayList<>();
-            addJarsToClasspath(new File(workPath + LIB_DIR), classpath);
+            addCpJarsToClasspath(new File(workPath + LIB_DIR), classpath);
             addJarsToClasspath(new File(workPath + EXT_DIR), classpath);
             addJarsToClasspath(new File(workPath + PLUGINS_DIR), classpath);
             String storeClassPath = String.join(":", classpath);
@@ -87,6 +123,8 @@ public class ServerNodeWrapper extends AbstractNodeWrapper {
             startCmd.addAll(Arrays.asList(
                     "-Dname=HugeGraphServer" + this.index,
                     "--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED",
+                    "--add-modules=jdk.unsupported",
+                    "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
                     "-cp", storeClassPath,
                     "org.apache.hugegraph.dist.HugeGraphServer",
                     "./conf/gremlin-server.yaml",
